--- a/style.css
+++ b/style.css
@@ -46,6 +46,12 @@ input.search
     font-size: 40px;
     box-shadow: 0 0 5px rgba(0,0,0,0.12), inset 0 0 2px rgba(0,0,0,0.19);
 }
+.suggestion
+{
+    margin: 0;
+    padding: 0;
+    position: relative;
+}
 
 .suggestion li
 {
