--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ input.search
     padding: 20px;
     transition: background 0.2s;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     text-transform: capitalize;
 }
 
